--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -16,17 +16,22 @@
   <widget class="QWidget" name="centralwidget">
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
-     <widget class="QCheckBox" name="s88_first">
-      <property name="text">
-       <string>S88 N1- 1</string>
-      </property>
-     </widget>
-    </item>
-    <item>
-     <widget class="QCheckBox" name="s88_second">
-      <property name="text">
-       <string>S88 N1 - 2</string>
-      </property>
+     <widget class="QTabWidget" name="tabWidget">
+      <widget class="QWidget" name="rbusTab">
+       <attribute name="title">
+        <string>R-BUS</string>
+       </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_2">
+        <item>
+         <widget class="QTableView" name="rbusTableView"/>
+        </item>
+       </layout>
+      </widget>
+      <widget class="QWidget" name="turnoutsTab">
+       <attribute name="title">
+        <string>Turnouts</string>
+       </attribute>
+      </widget>
      </widget>
     </item>
    </layout>
