--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,6 +17,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTabWidget" name="tabWidget">
+      <property name="currentIndex">
+       <number>0</number>
+      </property>
       <widget class="QWidget" name="rbusTab">
        <attribute name="title">
         <string>R-BUS</string>
@@ -31,6 +34,11 @@
        <attribute name="title">
         <string>Turnouts</string>
        </attribute>
+       <layout class="QVBoxLayout" name="verticalLayout_3">
+        <item>
+         <widget class="QTableView" name="accessoryTableView"/>
+        </item>
+       </layout>
       </widget>
      </widget>
     </item>
