WIP: move Z21Server to thread
- Use QElapsedTimer to avoid being stuck processing
  socket messages.
  This way we can process also UI commands

- Since it doesn't yet work properly, new action
  "Force Update" which triggers new read from socket

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -68,6 +68,7 @@
      <string>Drive</string>
     </property>
     <addaction name="actionNew_Throttle"/>
+    <addaction name="actionForce_Update"/>
    </widget>
    <addaction name="menuDrive"/>
   </widget>
@@ -75,6 +76,11 @@
   <action name="actionNew_Throttle">
    <property name="text">
     <string>New Throttle</string>
+   </property>
+  </action>
+  <action name="actionForce_Update">
+   <property name="text">
+    <string>Force Update</string>
    </property>
   </action>
  </widget>
